--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "es2020",
     "lib": [
-      "ES2020",
+      "es2024",
       "DOM"
     ],
     "declaration": true,
