--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "es2024",
     "lib": [
-      "es2024",
-      "DOM"
+      "ES2024",
+      "DOM",
     ],
     "declaration": true,
     "outDir": "build",
