--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "es2024",
     "lib": [
-      "ES2024",
-      "DOM",
+      "es2024",
+      "dom"
     ],
     "declaration": true,
     "outDir": "build",
