--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,45 @@
-node_modules
-.vscode
-build
-new-tests
-test
+# Node modules
+node_modules/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE / editor files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Build output
+build/
+dist/
+
+# Temporary files
+.tmp/
+.temp/
+coverage/
+
+# TypeScript
+*.tsbuildinfo
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# npm package lock files
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+# Tests
+new-tests/
