--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arse09/just-an-ecs",
-  "version": "1.2.1",
+  "version": "1.3.0-beta.1",
   "description": "A really basic ecs for the browser.",
   "type": "module",
   "main": "dist/index.js",
