--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "@arse09/just-an-ecs",
-  "version": "1.3.0-beta.3",
+  "version": "1.3.0",
   "description": "A really basic ecs for the browser.",
   "type": "module",
   "main": "dist/index.js",
-  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js"
   },
   "files": [
-    "dist"
+    "dist",
+    "src",
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
     "build": "tsc ",
