--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arse09/just-an-ecs",
   "version": "1.3.0",
-  "description": "A really basic ecs for the browser.",
+  "description": "An ecs.",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
