Removed deprecated code and refactored it

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,7 @@
       "skipLibCheck": true
     },
     "include": ["src"],
-    "exclude": ["build", "node_modules", "tests"]
+    "exclude": ["build", "node_modules",
+      "examples"
+    ]
   }
