--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arse09/just-an-ecs",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "An ecs.",
   "type": "module",
   "main": "dist/index.js",
@@ -9,8 +9,9 @@
     ".": "./dist/index.js"
   },
   "files": [
-    "dist",
-    "src",
+    "dist/",
+    "src/",
+    "package.json",
     "README.md",
     "LICENSE"
   ],
